--- a/index.css
+++ b/index.css
@@ -36,7 +36,7 @@ body {
 .item {
     width: 200px;
     height: 200px;
-    background-color: saddlebrown;
+    background-color: #724734;
     font-size: 100px;
     color: #e1e1e1;
     text-align: center;
